# sarcharts

./: .gitignore  .pylintrc  AUTHORS  ChangeLog  README.md  requirements.txt  sar  sarcharts.py  sarcharts.spec  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: publish-pypi.yml  python-publish.yml  rpm-build.yml
doc/: README.md
doc/demo/: metrics.csv  pablolaptop.pegaso.lan_cpu-load.html  pablolaptop.pegaso.lan_disk.html  pablolaptop.pegaso.lan_io_io-reads.html  pablolaptop.pegaso.lan_io_tps.html  pablolaptop.pegaso.lan_kernel.html  pablolaptop.pegaso.lan_memory.html  pablolaptop.pegaso.lan_network_net-dev.html  pablolaptop.pegaso.lan_network_net-edev.html  pablolaptop.pegaso.lan_network_net-nfsd.html  pablolaptop.pegaso.lan_network_net-sock.html  pablolaptop.pegaso.lan_paging.html  pablolaptop.pegaso.lan_psi_psi-cpu.html  pablolaptop.pegaso.lan_psi_psi-mem.html
docs/: README.md  index.html  pablolaptop.pegaso.lan_disk.html  pablolaptop.pegaso.lan_hugepages.html  pablolaptop.pegaso.lan_io_io-discard.html  pablolaptop.pegaso.lan_io_io-reads.html  pablolaptop.pegaso.lan_io_io-writes.html  pablolaptop.pegaso.lan_io_tps.html  pablolaptop.pegaso.lan_kernel.html  pablolaptop.pegaso.lan_memory.html  pablolaptop.pegaso.lan_network_net-dev.html  pablolaptop.pegaso.lan_network_net-edev.html  pablolaptop.pegaso.lan_network_net-nfs.html  pablolaptop.pegaso.lan_network_net-nfsd.html  pablolaptop.pegaso.lan_network_net-sock.html  pablolaptop.pegaso.lan_network_softnet.html  pablolaptop.pegaso.lan_paging.html  pablolaptop.pegaso.lan_process-and-context-switch.html  pablolaptop.pegaso.lan_psi_psi-cpu.html  pablolaptop.pegaso.lan_psi_psi-io.html  pablolaptop.pegaso.lan_psi_psi-mem.html  pablolaptop.pegaso.lan_queue.html  pablolaptop.pegaso.lan_swap-pages.html
docs/csvfiles/: pablolaptop.pegaso.lan_io_io-discard.csv  pablolaptop.pegaso.lan_network_net-nfs.csv  pablolaptop.pegaso.lan_network_softnet.csv
docs/demo/: README.md  events.csv  metrics.csv  pablolaptop.pegaso.lan_io_io-writes.html  pablolaptop.pegaso.lan_network_net-nfs.html  pablolaptop.pegaso.lan_psi_psi-io.html  sa08
docs/sar/: pablolaptop.pegaso.lan_cpu-load.csv  pablolaptop.pegaso.lan_disk.csv  pablolaptop.pegaso.lan_io_io-reads.csv  pablolaptop.pegaso.lan_io_io-writes.csv  pablolaptop.pegaso.lan_io_tps.csv  pablolaptop.pegaso.lan_kernel.csv  pablolaptop.pegaso.lan_network_net-dev.csv  (+6 more)
lib/: configuration.py  util.py
sarcharts/: __init__.py  sarcharts.py
templates/: chart.html  header.html
(+69 files in other folders)
