[metadata]
name = sarcharts
summary = Generates Charts from sar files using Chart.js
description_file =
    README.md
author = Pablo Ferández Rodríguez
home_page = https://github.com/pafernanr/sarcharts
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[entry_points]
console_scripts =
    sarcharts = sarcharts.cmd.sarcharts:main

[files]
packages =
    sarcharts
